# Processor

./: .gitignore  .gitmodules  Makefile  run
Assembler/: CMakeLists.txt  Makefile  run
Assembler/include/: asm_dump.hpp  asm_utilities.hpp  assembler.hpp  get_cmd_arg.hpp  labels.hpp
Assembler/source/: CMakeLists.txt  asm_dump.cpp  asm_utilities.cpp  assembler.cpp  get_cmd_arg.cpp  labels.cpp  main.cpp
SPU/: .gitignore  CMakeLists.txt  Makefile  run
SPU/include/: spu.hpp  spu_config.hpp  spu_dump.hpp  spu_utilities.hpp
SPU/source/: CMakeLists.txt  main.cpp  spu.cpp  spu_dump.cpp  spu_utilities.cpp
data/: Assembler.asm  Assembler.txt  Circle.asm  Circle.txt  Factorial.asm  Factorial.txt  MachineCode  MachineCode.txt  SolveSquare.asm  SolveSquare.txt  Squares.asm  Squares.txt  default.txt  listing.txt
include/: CodeProtect.hpp  array.hpp  commands  commands.hpp  constants.hpp  enum.hpp  errors.hpp
log_eblan/: main.html  table.html
log_eblan/css/: style.css
